[package]
name = "Prácticas"
version = "1.0.0"
authors = ["José Manuel Muñoz Fuentes <jmlosvillares@correo.ugr.es>"]

[dependencies]
itertools = "0.7.8"
ordered-float = "0.5.0"
rand = "0.4.2"
time = "*"
clap = "2.31.2"
byteorder = "1.2.3"

[profile.release]
lto = true

[[bin]]
name = "practica1"
path = "src/practica1.rs"

[[bin]]
name = "practica2"
path = "src/practica2.rs"

[[bin]]
name = "practica3"
path = "src/practica3.rs"
